# coulombgalore

./: CMakeLists.txt  coulombgalore.h
test/: example.cpp  unittests.cpp
